--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -50,9 +50,9 @@
                     <tbody>
                         {% for agentBetween in agentBetweens %}
                             <tr>
-                                <td>{{agentBetween.0.agent  }}</td>
+                                <td>{{agentBetween.0.agent.name  }}</td>
                                {% for letter in agentBetween %}
-                                    <td class="editFor">{{ letter.letter }}</td>
+                                    <td class="editFor">{{ letter.letter.letter }}</td>
                                 {% endfor %}
                                 <td class="update" scope ="col"><i class="fas fa-check"></i></td>
                                 <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>
