--- a/app/Resources/views/letter/show.html.twig
+++ b/app/Resources/views/letter/show.html.twig
@@ -7,36 +7,33 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des agents</h1>
+        <h1>Voici la liste des lettres</h1>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (agents) }}
+                {{ dump (letters) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
-                            <th>NNI</th>
-                            <th>Nom</th>
-                            <th>Prénom</th>
-                            <th>Fonction</th>
-                            <th>Equipe</th>
-                            <th>Role</th>
+                            <th>lettre</th>
+                            <th>TimeRange</th>
+                            <th>Durée effective</th>
+                            <th>Heure de début</th>
+                            <th>Heure de fin</th>
                         </tr>
                     </thead>                    
-                    <tbody> 
-                       {%for agent in agents %}
+                    <tbody>                        
+                        {%for letter in letters %}
                             <tr>                                                            
-                                <td>{{ agent.id }}</td>
-                                <td>{{ agent.nni }}</td>
-                                <td>{{ agent.name }}</td>
-                                <td>{{ agent.firstname }}</td>
-                                <td>{{ agent.function }}</td>
-                                <td>{{ agent.team.name }}</td>
-                                <td>{{ agent.role.name }}</td>
-                                
-                                {#<td><a href="{{ path('editagent', { 'id': agent.id }) }}">edit</a></td>#}                                
+                                <td>{{ letter.id }}</td>
+                                <td>{{ letter.letter }}</td>
+                                <td>{{ letter.timeRange}}</td> 
+                                <td>{{ letter.effectiveDuration}}</td>
+                                <th>{{ letter.starttime|date|localizeddate('none', 'none', 'fr', null, 'H:mm') }}</th>
+                                <th>{{ letter.endtime|date|localizeddate('none', 'none', 'fr', null, 'H:mm')}}</th>
+                                <td><a href="{{ path('editletter', { 'id': letter.id }) }}">edit</a></td>                                
                             </tr>
-                        {% endfor %}                       
+                        {% endfor %}
                     </body>                    
                 </table>
             </div>
@@ -56,4 +53,3 @@
 
 {% endblock %}
     
-
