--- a/app/Resources/views/role/show.html.twig
+++ b/app/Resources/views/role/show.html.twig
@@ -7,34 +7,23 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des agents</h1>
+        <h1>Voici la liste des roles</h1>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (agents) }}
+                {{ dump (roles) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
-                            <th>NNI</th>
-                            <th>Nom</th>
-                            <th>Prénom</th>
-                            <th>Fonction</th>
-                            <th>Equipe</th>
-                            <th>Role</th>
+                            <th>Nom</th> 
                         </tr>
                     </thead>                    
                     <tbody> 
-                       {%for agent in agents %}
+                       {%for role in roles %}
                             <tr>                                                            
-                                <td>{{ agent.id }}</td>
-                                <td>{{ agent.nni }}</td>
-                                <td>{{ agent.name }}</td>
-                                <td>{{ agent.firstname }}</td>
-                                <td>{{ agent.function }}</td>
-                                <td>{{ agent.team.name }}</td>
-                                <td>{{ agent.role.name }}</td>
-                                
-                                {#<td><a href="{{ path('editagent', { 'id': agent.id }) }}">edit</a></td>#}                                
+                                <td>{{ role.id }}</td>
+                                <td>{{ role.name }}</td>                                
+                                <td><a href="{{ path('home', { 'id': role.id }) }}">edit</a></td>                                
                             </tr>
                         {% endfor %}                       
                     </body>                    
