--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -5,36 +5,36 @@
 {% endblock %}
 {% block title %}Welcome!{% endblock %}
 
-{% block body %}   
+{% block body %}
     <div class="container">       
-        <h1>Voici la liste des agents</h1>
+        <h1>Voici la liste des contraintes reglementaires</h1>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (agents) }}
+                {{ dump (rules) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
-                            <th>NNI</th>
-                            <th>Nom</th>
-                            <th>Prénom</th>
-                            <th>Fonction</th>
-                            <th>Equipe</th>
-                            <th>Role</th>
+                            <th>Nombre d'heures maximum par jour</th>
+                            <th>Nombre d'heures de repos minimum par semaine</th>
+                            <th>Nombre d'heures minimum de repos entre les jours</th>
+                            <th>Nombre d'heures maximum par semaine</th>
+                            <th>Nombre d'heures maximum en moyenne sur X semaine</th>
+                            <th>X semaine</th>
                         </tr>
                     </thead>                    
                     <tbody> 
-                       {%for agent in agents %}
+                       {%for rule in rules %}
                             <tr>                                                            
-                                <td>{{ agent.id }}</td>
-                                <td>{{ agent.nni }}</td>
-                                <td>{{ agent.name }}</td>
-                                <td>{{ agent.firstname }}</td>
-                                <td>{{ agent.function }}</td>
-                                <td>{{ agent.team.name }}</td>
-                                <td>{{ agent.role.name }}</td>
+                                <td>{{ rule.id }}</td>
+                                <td>{{ rule.maxHourPerDay }}</td>
+                                <td>{{ rule.minRestPerWeek }}</td>
+                                <td>{{ rule.MinRestBetweenDays }}</td>
+                                <td>{{ rule.MaxHourPerWeek }}</td>
+                                <td>{{ rule.MaxAverageperWeek }}</td>
+                                <td>{{ rule.nbWeekForAverage }}</td>
                                 
-                                {#<td><a href="{{ path('editagent', { 'id': agent.id }) }}">edit</a></td>#}                                
+                                {#<td><a href="{{ path('editrule', { 'id': rule.id }) }}">edit</a></td>#}                                
                             </tr>
                         {% endfor %}                       
                     </body>                    
