--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -16,9 +16,11 @@
                         <tr>
                             <th>id</th>
                             <th>Nom</th>
-                            <th>Code d'arrêt</th>
-                            <th>Agent</th>
+                            <th>Code d'arrêt</th>                            
                             <th>Section</th>
+                            <th>Visualiser</th>
+                            <th>Editer</th>
+                            <th>Modifier</th>
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -26,8 +28,7 @@
                             <tr>                                                            
                                 <td>{{ team.id }}</td>
                                 <td>{{ team.name }}</td>
-                                <td>{{ team.event.code }}</td> 
-                                <td>{{ team.agent.name}}</td>
+                                <td>{{ team.event.code }}</td>                                
                                 <td>{{ team.section.name}}</td>
                                 <td><a href="{{ path('showAgents', { 'id': team.id }) }}"><i class="fas fa-eye"></i></a></td> 
                                 <td><a href="{{ path('editTeam', { 'id': team.id }) }}"><i class="fas fa-edit"></i></a></td>
