--- a/app/Resources/views/team/removeAgent.html.twig
+++ b/app/Resources/views/team/removeAgent.html.twig
@@ -8,7 +8,7 @@
 {% block body %}   
     <div class="container">
         <h1>{{title}} un agent dans l'équipe : {{team.name }}</h1>
-        <form action="{{ path('addAgent', { 'id': team.id }) }}" method="post" class="form-inline">
+        <form action="{{ path('removeAgent', { 'id': team.id }) }}" method="post" class="form-inline">
             <div class="form-group mb-2">
             {{ form_start(form) }}
             {{ form_rest(form) }}
