--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -29,10 +29,8 @@
                                {% for letter in agentBetween %}
                                     <td class="editFor">{{ letter.letter.letter }}</td>
                                 {% endfor %}
-                                <td class="update" scope ="col"><i class="fas fa-check"></i></td>
-                                <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>                                
-                                <td><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
-                                {#{{ dump(agentBetween.0.agent.id) }}#}
+                                <td class="update" scope ="col"><i class="fas fa-check"></i></td>                                                                
+                                <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                
                             </tr>
                        {% endfor %}
                         </tr>
