--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -16,20 +16,37 @@
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                     <thead class="thead-dark">                        
                         <tr>
-                            <th scope ="col" ></th>                            
+                            <th scope ="col" class="text-info">Nom</th>
+                            <th scope ="col" class="text-info">Prénom</th>
+                            <th scope ="col" class="text-info">NNI</th>
+                            <th scope ="col" class="text-info">Fonction</th>
                             {% for dateBetween in dateBetweens %}
                             <th class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
-                            {% endfor %}  
+                            {% endfor %}
+                            <th class="text-info">Editer</th>
+                            <th class="text-info">Supprimer</th>
                         </tr>                         
                     </thead>
                     <tbody>                        
                         {% for agentBetween in agentBetweens %}
                             <tr>                               
                                 <td>{{agentBetween.0.agent.name  }}</td>
+                                <td>{{agentBetween.0.agent.firstname  }}</td>
+                                <td>{{agentBetween.0.agent.nni  }}</td>
+                                <td>{{agentBetween.0.agent.function  }}</td>
                                {% for letter in agentBetween %}
-                                    <td class="editFor">{{ letter.letter.letter }}</td>
+                                    <td class="editFor 
+                                        {% if letter.letter.letter == 'R' %}
+                                            bg-success 
+                                        {% elseif letter.letter.letter == 'H' %}
+                                            bg-danger
+                                        {% else %} 
+                                            bg-info 
+                                        {% endif %}
+                                            ">{{ letter.letter.letter }}
+                                    </td>
                                 {% endfor %}
-                                <td class="update" scope ="col"><i class="fas fa-check"></i></td>                                                                
+                                <td class="update" scope ="col"><i class="fas fa-edit"></i></td>                                                                
                                 <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                
                             </tr>
                        {% endfor %}
