--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -14,17 +14,43 @@
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                    <thead class="thead-dark">                        
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope ="col" class="text-info"></th>
+                            <th scope ="col" class="text-info"></th>
+                            <th scope ="col" class="text-info"></th>
+                            <th scope ="col" class="text-info"></th>
+                            {% for dateBetween in dateBetweens %}
+                            <th scope ="col" class="">
+                                {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
+                                    S
+                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 1 %}
+                                    L
+                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 2 %}
+                                    M
+                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 3 %}
+                                    M
+                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 4 %}
+                                    J
+                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 5 %}
+                                    V
+                                 {% else %}
+                                    D
+                                 {% endif %} 
+                            {% endfor %}
+                            <th scope ="col" class="text-info"></th>
+                            <th scope ="col" class="text-info"></th>
+                        </tr>
                         <tr>
                             <th scope ="col" class="text-info">Nom</th>
                             <th scope ="col" class="text-info">Prénom</th>
                             <th scope ="col" class="text-info">NNI</th>
                             <th scope ="col" class="text-info">Fonction</th>
                             {% for dateBetween in dateBetweens %}
-                            <th class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
+                            <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
                             {% endfor %}
-                            <th class="text-info">Editer</th>
-                            <th class="text-info">Supprimer</th>
+                            <th scope ="col" class="text-info"></th>
+                            <th scope ="col" class="text-info"></th>
                         </tr>                         
                     </thead>
                     <tbody>                        
@@ -35,19 +61,20 @@
                                 <td>{{agentBetween.0.agent.nni  }}</td>
                                 <td>{{agentBetween.0.agent.function  }}</td>
                                {% for letter in agentBetween %}
-                                    <td class="editFor 
+                                    <td id = "{{ letter.id }}" class="editFor
                                         {% if letter.letter.letter == 'R' %}
-                                            bg-success 
+                                            table-success 
                                         {% elseif letter.letter.letter == 'H' %}
-                                            bg-danger
+                                            table-danger
                                         {% else %} 
-                                            bg-info 
+                                            table-info
                                         {% endif %}
                                             ">{{ letter.letter.letter }}
                                     </td>
                                 {% endfor %}
-                                <td class="update" scope ="col"><i class="fas fa-edit"></i></td>                                                                
-                                <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                
+                                <td class="update" scope ="col"><i class="fas fa-edit text-primary"></i></td>
+                                <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
+                                <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>                                                                
                             </tr>
                        {% endfor %}
                         </tr>
@@ -55,7 +82,7 @@
                 </table>
                 <h2>Description : <span id="titre"></span></h2>
                 <h2></h2>
-                <h2>Détail : <span id="producteur"></span></h2>                
+                <h2>Détail : <span id="description"></span></h2>                
                {# {% for dateBetween in dateBetweens %}
                     <th class="">{{dateBetween.date | date("F jS \\a\\t g:ia", "Europe/Paris") }}</th>
                     {% endfor %}
