--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,13 +56,19 @@
         </div>
         {% endblock %}
     
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="alert alert-{{ label }}">
-                {{ message }}
+        <div class="container">
+            <div class = "row my-3">
+               <div class ="col-md-10 ">
+                {% for label, messages in app.flashes %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ label }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+               </div>
             </div>
-        {% endfor %}
-    {% endfor %}
+        </div>
     
         {% block body %}
         {% endblock %}
