--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -2,94 +2,97 @@
 
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>{% endblock %}
-{% block body %}   
-    <div class="container">        
-        <form action="{{ path('showAgenda') }}" method="post" class="form form-inline my-3">
-            <div class="form-group mb-2">
-            {{ form_start(form) }}                     
-            {{ form_rest(form) }}
-            {{ form_end(form) }}
-            </div
-        </form>
-        <div class= "row">
-            <div class="col-md-10">
-                <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th scope ="col" class="text-info"></th>
-                            <th scope ="col" class="text-info"></th>
-                            <th scope ="col" class="text-info"></th>
-                            <th scope ="col" class="text-info"></th>
-                            {% for dateBetween in dateBetweens %}
-                            <th scope ="col" class="">
-                                {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
-                                    S
-                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 1 %}
-                                    L
-                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 2 %}
-                                    M
-                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 3 %}
-                                    M
-                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 4 %}
-                                    J
-                                {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 5 %}
-                                    V
-                                 {% else %}
-                                    D
-                                 {% endif %} 
+{% block title %}Agenda{% endblock %}
+{% block body %}    
+<div class="container">        
+    <form action="{{ path('showAgenda') }}" method="post" class="form form-inline my-3">
+        <div class="form-group mb-2">
+        {{ form_start(form) }}                     
+        {{ form_rest(form) }}
+        {{ form_end(form) }}
+        </div
+    </form>
+    <div class= "row">
+        <div class="col-md-10">
+            <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
+                <caption class="text-center">Equipe {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}}</caption>
+                <thead class="thead">                        
+                    <tr class ="bg-dark">
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        {% for dateBetween in dateBetweens %}
+                        <th scope ="col" class="text-light">
+                            {% if dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 6 %}
+                                S
+                            {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 1 %}
+                                L
+                            {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 2 %}
+                                M
+                            {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 3 %}
+                                M
+                            {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 4 %}
+                                J
+                            {% elseif dateBetween.date|localizeddate('none', 'none', 'fr', null, 'e')  == 5 %}
+                                V
+                             {% else %}
+                                D
+                             {% endif %} 
+                        {% endfor %}
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                    </tr>
+                    <tr class="bg-muted">
+                        <th scope ="col" class="text-info">Nom</th>
+                        <th scope ="col" class="text-info">Prénom</th>
+                        <th scope ="col" class="text-info">NNI</th>
+                        <th scope ="col" class="text-info">Fonction</th>
+                        {% for dateBetween in dateBetweens %}
+                        <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
+                        {% endfor %}
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"></th>
+                    </tr>                         
+                </thead>
+                <tbody>                        
+                    {% for agentBetween in agentBetweens %}
+                        <tr>                               
+                            <td>{{agentBetween.0.agent.name  }}</td>
+                            <td>{{agentBetween.0.agent.firstname  }}</td>
+                            <td>{{agentBetween.0.agent.nni  }}</td>
+                            <td>{{agentBetween.0.agent.function  }}</td>
+                           {% for letter in agentBetween %}
+                                <td id = "{{ letter.id }}" class="editFor
+                                    {% if letter.letter.letter == 'R' %}
+                                        table-success 
+                                    {% elseif letter.letter.letter == 'H' %}
+                                        table-danger
+                                    {% else %} 
+                                        table-info
+                                    {% endif %}
+                                        ">{{ letter.letter.letter }}
+                                </td>
                             {% endfor %}
-                            <th scope ="col" class="text-info"></th>
-                            <th scope ="col" class="text-info"></th>
+                            <td class="update" scope ="col"><i class="fas fa-edit text-primary"></i></td>
+                            <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
+                            <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>                                                                
                         </tr>
-                        <tr>
-                            <th scope ="col" class="text-info">Nom</th>
-                            <th scope ="col" class="text-info">Prénom</th>
-                            <th scope ="col" class="text-info">NNI</th>
-                            <th scope ="col" class="text-info">Fonction</th>
-                            {% for dateBetween in dateBetweens %}
-                            <th scope ="col" class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'd') }}</th>
-                            {% endfor %}
-                            <th scope ="col" class="text-info"></th>
-                            <th scope ="col" class="text-info"></th>
-                        </tr>                         
-                    </thead>
-                    <tbody>                        
-                        {% for agentBetween in agentBetweens %}
-                            <tr>                               
-                                <td>{{agentBetween.0.agent.name  }}</td>
-                                <td>{{agentBetween.0.agent.firstname  }}</td>
-                                <td>{{agentBetween.0.agent.nni  }}</td>
-                                <td>{{agentBetween.0.agent.function  }}</td>
-                               {% for letter in agentBetween %}
-                                    <td id = "{{ letter.id }}" class="editFor
-                                        {% if letter.letter.letter == 'R' %}
-                                            table-success 
-                                        {% elseif letter.letter.letter == 'H' %}
-                                            table-danger
-                                        {% else %} 
-                                            table-info
-                                        {% endif %}
-                                            ">{{ letter.letter.letter }}
-                                    </td>
-                                {% endfor %}
-                                <td class="update" scope ="col"><i class="fas fa-edit text-primary"></i></td>
-                                <td class="check"><a href=""><i class="fas fa-check text-success"></i></a></td>
-                                <td class="trash"><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt text-danger"></i></a></td>                                                                
-                            </tr>
-                       {% endfor %}
-                        </tr>
-                    </tbody>                 
-                </table>
-                <h2>Description : <span id="titre"></span></h2>
-                <h2></h2>
-                <h2>Détail : <span id="description"></span></h2>                
-               {# {% for dateBetween in dateBetweens %}
-                    <th class="">{{dateBetween.date | date("F jS \\a\\t g:ia", "Europe/Paris") }}</th>
-                    {% endfor %}
-                #}
-            </div>
+                   {% endfor %}                        
+                </tbody>                 
+            </table>
+            <h2>Description : <span id="titre"></span></h2>
+            <h2></h2>
+            <h2>Détail : <span id="description"></span></h2>                
+           {# {% for dateBetween in dateBetweens %}
+                <th class="">{{dateBetween.date | date("F jS \\a\\t g:ia", "Europe/Paris") }}</th>
+                {% endfor %}
+            #}
         </div>
-    </div> 
+    </div>
+</div> 
 {% endblock %}
 
 
