--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -4,21 +4,28 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>{% endblock %}
 {% block title %}Agenda{% endblock %}
 {% block body %}    
-<div class="container">        
-    <form action="{{ path('showAgenda') }}" method="post" class="form form-inline my-3">
-        <div class="form-group mb-2">
-        {{ form_start(form) }}       
-        {{ form_rest(form) }}
-        {{ form_end(form) }}
-        </div
-    </form>
+<div class="container">
+    <div class= "row">
+        <div class="col-md-12">
+            <form action="{{ path('showAgenda') }}" method="post" class="form form-inline">
+                <div class="form-group mb-2">
+                {{ form_start(form) }}       
+                {{ form_rest(form) }}
+                {{ form_end(form) }}                
+                </div
+            </form>
+        </div>
+    <div>
+    <div 
+</div>
+<div class="container">               
     <div class= "row">
         <div class="col-md-12">
             <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                 <caption class="text-center">Equipe {{ team.name }} du {{ startDate|localizeddate('none', 'none', 'fr', null, 'EE d MMMM y')}} au  {{ endDate|localizeddate('none', 'none', 'fr', null, ' E d MMMM y')}}</caption>
                 <thead class="thead">                        
                     <tr class ="bg-dark">
-                        <th scope ="col" class="text-info"></th>
+                        <th scope ="col" class="text-info"><a class="btn btn-danger btn-sm" href="{{ path('agendaTempEdit2', { 'id': team.id, 'userId': 2}) }}" role="button">Modifier</a></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
                         <th scope ="col" class="text-info"></th>
@@ -65,7 +72,7 @@
                             <td>{{agentBetween.0.agent.nni  }}</td>
                             <td>{{agentBetween.0.agent.function  }}</td>
                            {% for letter in agentBetween %}
-                                <td id = "{{ letter.id }}" class="editFor
+                                <td id = "{{ letter.id }}" class="
                                     {% if letter.letter.letter == 'R' %}
                                         table-success 
                                     {% elseif letter.letter.letter == 'H' %}
@@ -102,7 +109,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/config.js"></script>
-<script type="text/javascript" src="/assets/js/datatable/ajax.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/addDeleteRow.js"></script>
 
 {% endblock %}
